Fixing vertical alignment on CSS files

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -2,17 +2,17 @@ div.rideArea {
 	background-color: #F0FFFF;
 	margin: auto;
 	width: 1152px;
-    height: 75%;
-    border: 3px solid black;
-    border-radius: 20px;
-    box-shadow: 10px 10px 50px white;
-    overflow: hidden;
-    text-align:center;
-    font-family: "Mono";
-    padding-left: 48px;
+   height: 75%;
+   border: 3px solid black;
+   border-radius: 20px;
+   box-shadow: 10px 10px 50px white;
+   overflow: hidden;
+   text-align:center;
+   font-family: "Mono";
+   padding-left: 48px;
 }
-h4{
-  line-height: 20px; 
+h4 {
+   line-height: 20px; 
 }
 div.singleRide button{
 	border-radius: 20px;
@@ -21,60 +21,55 @@ div.singleRide button{
 	margin-bottom: 2%;
 	box-shadow: 15px 10px 50px green;
 	border: 1px solid black;
-    font-weight: bolder;
-    font-size: 1.17em;
+   font-weight: bolder;
+   font-size: 1.17em;
 }
 
-div.singleRide{
+div.singleRide {
 	background-color: yellow;
 	margin: 10px 48px 10px 0px;
 	width: 240px;
-    height: 45%;
-    border: 2px solid black;
-    border-radius: 20px;
-    overflow: hidden;
-    font-family: "Mono";
-    float: left;
-    box-sizing: border-box;	
+   height: 45%;
+   border: 2px solid black;
+   border-radius: 20px;
+   overflow: hidden;
+   font-family: "Mono";
+   float: left;
+   box-sizing: border-box;	
 }
 
 div.singleRide:hover {
-    border-color: red;
+   border-color: red;
 }
 
-div.rideDesc{
+div.rideDesc {
 	width: 100%;
-    height: 100%;
-    overflow-y: auto;
-    display: none;
+   height: 100%;
+   overflow-y: auto;
+   display: none;
 }
 div.rideDesc.visible {
-    display: block;
+   display: block;
 }
 
-div.ridePic{
+div.ridePic {
 	width: 100%;
-    height: 144px;
-    overflow: hidden;
+   height: 144px;
+   overflow: hidden;
 }
 
 .verticalLine {
-    border-left: thick solid #ff0000;
+   border-left: thick solid #ff0000;
 }
 
-/* img {
-    height: 100%;
-    width: 100%;
-} */
-
 iframe {
-    border: 0 none;
-    width: 800px;
-    height: 450px;
+   border: 0 none;
+   width: 800px;
+   height: 450px;
 }
 
 .back {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
 }
