--- a/css/master.css
+++ b/css/master.css
@@ -1,27 +1,27 @@
 body {
-    margin: 0px;
-    background: lightgray;
-    text-align: center;
+   margin:     0px;
+   background: lightgray;
+   text-align: center;
 }
 
 img {
-    max-width: 100%;
-    max-height: 600px;
-    width: 100%;
+   max-width:  100%;
+   max-height: 600px;
+   width:      100%;
 }
 
 #banner p#welcome {
-    color: white;
-    font-size: 70px;
-    font-weight: bold;
-    background-color: rgba(0, 0, 0, 0.5);
+   color:            white;
+   font-size:        70px;
+   font-weight:      bold;
+   background-color: rgba(0, 0, 0, 0.5);
 }
 
 #wrapper {
-    font-family: arial;
-    width: 100%;
-    max-width: 1330px;
-    margin: 0 auto;
+   font-family: arial;
+   width:       100%;
+   max-width:   1330px;
+   margin:      0 auto;
 }
 
 header {
@@ -29,132 +29,134 @@ header {
 }
 
 #main-navigation { 
-    width: 980px; 
-    margin: 0 auto;
-    padding: 5px;
+   width:   980px; 
+   margin:  0 auto;
+   padding: 5px;
 }
 
 #main-navigation ul {
-    text-align: right;
-    list-style-type: none;
-    margin-right: 10px;
+   text-align:      right;
+   list-style-type: none;
+   margin-right:    10px;
 }
 
 #main-navigation li {
-    display: inline-block;
-    margin-left: 2px;
+   display:     inline-block;
+   margin-left: 2px;
 }
 
 #main-navigation a {
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 15px;
-    padding: 20px;
+   color:           #fff;
+   text-decoration: none;
+   text-transform:  uppercase;
+   font-size:       15px;
+   padding:         20px;
 }
 
 #main-navigation a:hover {
-    background-color: yellow;
-	color: black;
+   background-color: yellow;
+	color:            black;
 }
 
 #banner {
-    /* position: absolute; */
-    width: 100%;
-    /* overflow: hidden; */
+   width: 100%;
 }
 
 #banner p {
-    font-family: "Yu Gothic";
-    font-weight: lighter;
-    text-transform: capitalize;
-    font-size: 45px;
-    color: white;
-    width: 100%;
-    text-align: center;
-    /* position: absolute; */
-    top:20px;
+   font-family:    "Yu Gothic";
+   font-weight:    lighter;
+   text-transform: capitalize;
+   font-size:      45px;
+   color:          white;
+   width:          100%;
+   text-align:     center;
+   top:            20px;
 }
 
 .top {
-    animation: intro1 1s forwards;
-    position: relative;
+   animation: intro1 1s forwards;
+   position:  relative;
 }
 
 @keyframes intro1 {
-    0% {transform: translateY(100px); opacity:0}
-    100% {transform: translateY(0px); opacity:100}
+   0% {
+      transform: translateY(100px);
+      opacity:   0;
+   }
+   100% {
+      transform: translateY(0px);
+      opacity:   100;
+   }
 }
 
 ul {
-    width: 100%;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+   width:           100%;
+   list-style-type: none;
+   margin:          0;
+   padding:         0;
+   overflow:        hidden;
 }
 
 li a {
-    display: block;
-    text-align: center;
-    Font-weight: Bold;
-    Font-size: 20px;
-    border-radius: 6px;
+   display:       block;
+   text-align:    center;
+   font-weight:   bold;
+   font-size:     20px;
+   border-radius: 6px;
 }
 
 #weatherAPI {
-    display: inline-block;
+   display: inline-block;
 }
 #google-map {
-    display: inline-block;
+   display: inline-block;
 }
 #weatherAPI iframe,
 #google-map iframe {
-    margin-left: 5%;
-    width: 600px;
-    height: 140px;
-    border: 0 none;
+   margin-left: 5%;
+   width:       600px;
+   height:      140px;
+   border:      0 none;
 }
 #google-map iframe {
-    border: 2px black solid;
-    margin-top: 2%;
-    border-radius: 15px;
+   border:        2px black solid;
+   margin-top:    2%;
+   border-radius: 15px;
 }
 
 #footer {
-    margin-top: 360px;
-    margin-left: auto;
-    margin-right: auto;
-    display: inline-block;
+   margin-top:   360px;
+   margin-left:  auto;
+   margin-right: auto;
+   display:      inline-block;
 }
 
-.changePrice{
-    display: none;
-    margin-left: 5%;
-    Font-size: 20px;
-
+.changePrice {
+   display:     none;
+   margin-left: 5%;
+   font-size:   20px;
 }
-.changePrice button{
-    background-color: #FF5500;
-    border: 3px solid black;
-    border-radius: 20px;
-    margin-left: 2%;
-    box-shadow: 5px 5px 25px #DEB887;
+.changePrice button {
+   background-color: #FF5500;
+   border:           3px solid black;
+   border-radius:    20px;
+   margin-left:      2%;
+   box-shadow:       5px 5px 25px #DEB887;
 }
-.login{
-    text-align: center;
+.login {
+   text-align: center;
 }
-.login button{
-    background-color: #FF5500;
-    border: 3px solid black;
-    border-radius: 20px;
-    box-shadow: 5px 5px 25px #DEB887;
+.login button {
+   background-color: #FF5500;
+   border:           3px solid black;
+   border-radius:    20px;
+   box-shadow:       5px 5px 25px #DEB887;
 }
 
 #nav-title {
-    float: left;
-    color: white;
-    padding-top: 6px;
-    font-weight: bold;
-    font-size: 40px;
+   float:       left;
+   color:       white;
+   padding-top: 6px;
+   font-weight: bold;
+   font-size:   40px;
 }
